Closed
Bug 370121
Opened 19 years ago
Closed 16 years ago
Clicking on red/yellow warning text in certificate panel causes text to change to black
Categories
(Camino Graveyard :: Security, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: trevor, Assigned: chris)
References
()
Details
(Keywords: fixed1.8.1.24, polish, testcase, Whiteboard: [camino-2.0.1])
Attachments
(1 file, 2 obsolete files)
|
1.52 KB,
patch
|
chris
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.8.1.2pre) Gecko/20070210 Camino/1.1a2+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.8.1.2pre) Gecko/20070210 Camino/1.1a2+
When visiting a site that has an invalid or untrusted SSL/TLS certificate, a warning panel is presented containing the certificate details and the error which occurred while validating that certificate. Normally this error is displayed in red text. However, if a user clicks on that text, it changes to black for no apparent reason.
Reproducible: Always
Steps to Reproduce:
1. Visit a site that uses HTTPS has an invalid or self-signed SSL certificate.
2. When the certificate warning panel appears, click on the red or yellow error text.
Actual Results:
The warning text changes to black.
Expected Results:
The warning text should remain the same color.
Yep.
Some additional STR:
1. https://www.a-trust.at/
2. Add exception
3. Click on the red error message in the cert view
Or
1. Open the Certificates window in Security prefs, switch to Authorities.
2. Double-click on an authority that has red text in the Validity column
3. Click on the red error message in the cert view
ER: The red error message text remains red
AR: The red error message text switches to black
| Assignee | ||
Comment 4•16 years ago
|
||
Set the text colour of the field directly.
Assignee: nobody → trendyhendy2000
Status: NEW → ASSIGNED
Attachment #407455 -
Flags: review?(cl-bugs-new)
Comment 5•16 years ago
|
||
Comment on attachment 407455 [details] [diff] [review]
Fix v1.0
CertificateItem doesn't declare textColorForValidity to be public, so this doesn't build. (The patch as uploaded also has an offset due to the recent landing of bug 383988, but that's not a big deal.)
Attachment #407455 -
Flags: review?(cl-bugs-new) → review-
| Assignee | ||
Comment 6•16 years ago
|
||
Hey, let's try it this way! Gets the text colour from the attributed string, rather than making that method public.
Attachment #407455 -
Attachment is obsolete: true
Attachment #408248 -
Flags: review?(cl-bugs-new)
Comment 7•16 years ago
|
||
Comment on attachment 408248 [details] [diff] [review]
Fix v1.1
Builds and works as expected (still has a 10-line offset, though).
Attachment #408248 -
Flags: review?(cl-bugs-new) → review+
| Assignee | ||
Comment 8•16 years ago
|
||
Fixed the offset; code is the same as v1.1.
Attachment #408248 -
Attachment is obsolete: true
Attachment #408466 -
Flags: superreview?(mikepinkerton)
Attachment #408466 -
Flags: review+
Flags: camino2.0.1?
Comment 9•16 years ago
|
||
Comment on attachment 408466 [details] [diff] [review]
Fix v1.1, offset fixed
sr=pink
Attachment #408466 -
Flags: superreview?(mikepinkerton) → superreview+
Landed on cvs trunk and CAMINO_2_0_BRANCH for Camino 2.0.1.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: camino2.0.1? → camino2.0.1+
Resolution: --- → FIXED
Whiteboard: [camino-2.0.1]
This actually works on 1.6.x, too, so we probably should take it there, too, just to lessen the "is this broken?" appearance of our security UI.
Flags: camino1.6.11?
Landed on cvs trunk in advance of 1.6.11.
Flags: camino1.6.11? → camino1.6.11+
Keywords: fixed1.8.1.24
(In reply to comment #12)
> Landed on cvs trunk in advance of 1.6.11.
s/cvs trunk/MOZILLA_1_8_BRANCH/
You need to log in
before you can comment on or make changes to this bug.
Description
•