Bug 370121 - Clicking on red/yellow warning text in certificate panel causes text to change to black. Patch by Christopher Henderson <trendyhendy2000@gmail.com>, r=cl, sr=pink, a/Cm2.0.1=me